# document_processing

./: .env-template  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-traefik.yml  pyproject.toml  requirements.txt
document_processing/: gui.py  main_ocr.py
document_processing/extraction/: extraction.py
document_processing/ocr/: ocr.py
document_processing/validation/: validate.py
prompts/: extract_sender.txt
solutions/: privatrechnung-vorlage.txt  screenshot-nettorechnung-01-lexoffice-rechnungsprogramm.txt
